# saniraq.kz

./: .gitignore  README.md  pyproject.toml  sql_app.db
alembic/: env.py
alembic/versions/: 13d69b8bc8bc_add_favorites.py  50f07983077e_update_comments_table.py  54dfcede0d7d_add_comments.py  5d9709ed28b4_add_comments_table.py  7fa4cda0d7a5_add_ads.py  866f0be6af80_add_users.py  92e8607ed272_add_one_to_many_relationship_for_users_.py  ab5ae3333557_second_migration_add_ads.py  d971a19e5fe0_first_migration_users_table.py
saniraq/: actions.py  main.py  models.py  schemas.py
scripts/: launch.sh
